tests/machine/x/hs/substring_builtin.error

/workspace/mochi/tests/machine/x/hs/substring_builtin.hs:107:13: error:
    Variable not in scope: substring :: String -> t0 -> t1 -> String
    |
107 |   putStrLn (substring "mochi" 1 4)
    |             ^^^^^^^^^


Context around line 107:
  105| main :: IO ()
  106| main = do
  107|   putStrLn (substring "mochi" 1 4)
  108| 
